<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ar.edu.utn.frba.dds</groupId>
    <artifactId>donatrack</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>donatrack</name>
    <url>https://github.com/dds-utn</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>
        <!-- Source: https://mvnrepository.com/artifact/com.google.guava/guava
            Motivo: Proporciona utilidades adicionales en Java como: caché, Optional, etc. -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>33.6.0-jre</version>
            <scope>compile</scope>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter
            Motivo: Para escribir y ejecutar pruebas unitarias. -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/org.mockito/mockito-core
             Motivo: Permite crear mocks (objetos simulados) para pruebas unitarias. -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.23.0</version>
            <scope>test</scope>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/com.opencsv/opencsv
             Motivo:  Permite leer archivos CSV. -->
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>5.12.0</version>
            <scope>compile</scope>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/org.eclipse.paho/org.eclipse.paho.client.mqttv3
            Motivo: permite enviar y recibir mensajes mediante MQTT. -->
        <dependency>
            <groupId>org.eclipse.paho</groupId>
            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
            <version>1.2.5</version>
            <scope>compile</scope>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
             Motivo: Para convertir/desconvertir JSON. -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.22.0</version>
            <scope>compile</scope>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/org.projectlombok/lombok
            Motivo: Genera automáticamente getters, setters, constructores y otros métodos repetitivos. -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.42</version>
            <scope>provided</scope>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/io.javalin/javalin
             Motivo: Para crear APIs REST y aplicaciones web. -->
        <dependency>
            <groupId>io.javalin</groupId>
            <artifactId>javalin</artifactId>
            <version>6.3.0</version>
            <scope>compile</scope>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/com.google.code.gson/gson
             Motivo: Para convertir/desconvertir JSON. -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.11.0</version>
            <scope>compile</scope>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
             Motivo: Para registrar mensajes de log en consola. necesario para javalin-->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.16</version>
            <scope>compile</scope>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/com.sun.mail/javax.mail
            Motivo: Permite enviar correos electrónicos mediante SMTP. -->
        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>javax.mail</artifactId>
            <version>1.6.2</version>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/io.github.cdimascio/dotenv-java
            Motivo: Para obtener variables de entorno desde un archivo .env -->
        <dependency>
            <groupId>io.github.cdimascio</groupId>
            <artifactId>dotenv-java</artifactId>
            <version>3.0.0</version>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/com.twilio.sdk/twilio
        Motivo: Permite enviar SMS y mensajes de WhatsApp utilizando la API de Twilio. -->
        <dependency>
            <groupId>com.twilio.sdk</groupId>
            <artifactId>twilio</artifactId>
            <version>9.14.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.github.flbulgarelli/jpa-extras
        Motivo: Utilidades adicionales para trabajar más cómodamente con JPA -->
        <dependency>
            <groupId>io.github.flbulgarelli</groupId>
            <artifactId>jpa-extras</artifactId>
            <version>1.0.0-rc1</version>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/org.hsqldb/hsqldb
        Motivo: Permite conectarse a una base de datos HSQLDB, capaz de ejecutarse solo en memoria. -->
        <dependency>
            <groupId>org.hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>2.7.1</version>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/com.mysql/mysql-connector-j
        Motivo: Permite conectarse a una base de datos de SQL. -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>26.7.0</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!--
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>4.7.3.2</version>
                <executions>
                    <execution>
                        <id>Validar Code Smells</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.8</version>
                <configuration>
                    <excludes>
                        <exclude>ar/edu/utn/frba/dds/donatrack/Main.class</exclude>
                        <exclude>ar/edu/utn/frba/dds/donatrack/shared/**/*</exclude>
                        <!-- microservicios de donaciones -->
                        <exclude>ar/edu/utn/frba/dds/donatrack/donaciones/cron/**/*</exclude>
                        <exclude>ar/edu/utn/frba/dds/donatrack/donaciones/persistencia/**/*</exclude>
                        <exclude>ar/edu/utn/frba/dds/donatrack/donaciones/web/**/*</exclude>
                        <!-- microservicios de logística -->
                        <exclude>ar/edu/utn/frba/dds/donatrack/logistica/cron/**/*</exclude>
                        <exclude>ar/edu/utn/frba/dds/donatrack/logistica/persistencia/**/*</exclude>
                        <exclude>ar/edu/utn/frba/dds/donatrack/logistica/web/**/*</exclude>
                        <exclude>ar/edu/utn/frba/dds/donatrack/logistica/broker/**/*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>Validar Cobertura</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <rule>
                                    <element>PACKAGE</element>
                                    <limits>
                                        <limit>
                                            <counter>LINE</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0.60</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.42</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>empaquetar-con-dependencias</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                            <archive>
                                <manifest>
                                    <mainClass>ar.edu.utn.frba.dds.donatrack.Main</mainClass>
                                </manifest>
                            </archive>
                            <finalName>donatrack</finalName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
